--- a/views/index.ejs
+++ b/views/index.ejs
@@ -159,7 +159,7 @@
               </form>
             </div>
           </div>
-          <div class="row pt-3">
+          <!-- <div class="row pt-3">
             <div class="col">
               <h5 class="text-center">Solution</h5>
               <form>
@@ -199,7 +199,7 @@
                 </div>
               </form>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
