submit changlle and rotate image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -159,30 +159,16 @@
               </form>
             </div>
           </div>
-          <!-- <div class="row pt-3">
+          <div class="row pt-3">
             <div class="col">
               <h5 class="text-center">Solution</h5>
               <form>
-                <div class="row">
-                  <div class="col">
-                    <label for="rowNum">Swivel Angle</label>
-                    <input id="swivelAngle" type="text" class="form-control" />
-                  </div>
-                  <div class="col">
-                    <label for="colNum">Number of picks</label>
-                    <input
-                      id="NumberOfPicks"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
-                </div>
                 <div class="row py-3">
                   <div class="col">
                     <label for="stepNum">Moves</label>
                     <textarea
                       class="form-control"
-                      id="moves"
+                      id="contentSubmit"
                       rows="3"
                     ></textarea>
                   </div>
@@ -190,7 +176,7 @@
                 <div class="row">
                   <button
                     type="button"
-                    data-value=""
+                    data-challenge=""
                     class="btn btn-outline-info"
                     id="submitMoves"
                   >
@@ -199,7 +185,7 @@
                 </div>
               </form>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
